# Hackthon_SpecKitPlus

./: .gitignore  404.html  IMPLEMENTATION_SUMMARY.md  QWEN.md  README.md  alembic.ini  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  sitemap.xml  test_books_api.py
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
assets/css/: styles.004afcc4.css
assets/js/: 03f73aa7.e764cb41.js  0b94d366.b7e4c37b.js  0e384e19.31b64c37.js  0fe23d3d.d39d65d0.js  11b43341.21903c25.js  276152d6.2ca2cd83.js  3028199e.7ac5d0b5.js  349d9f3b.1ebe3fcc.js  36b267cb.5e248c0c.js  37afe5b9.5165a688.js  39fc580f.a223ad1d.js  481277ea.7b88bff8.js  58218a4e.ccf20c55.js  5bbac7dc.9916a097.js  main.5a8fca82.js  (+20 more)
backend/: .env.example  0.29.0  book_management.db  books.db  pyproject.toml  requirements.txt  requirements_minimal.txt  simple_books_api.py  start_server.py
backend/src/: config.py  main.py
backend/src/api/: books.py  feedback.py  health.py  query.py  query_selection.py  stream.py
backend/src/db/: database.py  models.py  repositories.py
backend/src/db/migrations/: env.py
backend/src/models/: schemas.py  selection.py
backend/src/security/: auth.py
backend/src/services/: agent_service.py  books_service.py  chunk_service.py  citation_service.py  qdrant_service.py  retrieval_service.py  selection_service.py
backend/src/utils/: logging.py  rate_limiter.py
docs/: index.html  index.md  intro.md  prerequisites.md
frontend/: .eslintrc.json  package.json
(+88 files in other folders)
